Bug 1151916 - Set worker principalinfo on cache load. r=bkelly